--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h1>Joyce Kao, Ph.D.</h1>
       <p>Open Science | Tech & Data | Photography</p>
       <div class="btn-container">
-        <a class="btn-primary" href="images/JKAO_CV.2020.05.pdf">Résumé</a>
+        <a class="btn-primary" href="images/JKAO_CV_20201213.pdf">Résumé</a>
         <a class="btn-primary" href="mailto:joyceykao@gmail.com?">Contact</a>
       </div>
     </div>
