--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Joyce Kao: Tech & Data | Open Science | Photography</title>
   <link rel="shortcut icon" href="data:image/x-icon;" type="image/x-icon">
-  <meta name="description" content="Based in Zurich, Switzerland, but am no stranger to remote work. Data and image analysis services and advocate for Open Science. I have a hobby too: Photography!">
+  <meta name="description" content="Based in Zurich, Switzerland, but am no stranger to remote work. Offering data + image analysis, and web development services. Advocates for Open Science. I have a hobby too: Photography!">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
