removed js line in html

--- a/index.html
+++ b/index.html
@@ -58,6 +58,6 @@
       <p>Copyright 2020 by Joyce Y. Kao.</p>
   </div>
 <!--   <input type="file" webkitdirectory="" directory=""> -->
-  <script src="lib/main.js"></script>
+<!--   <script src="lib/main.js"></script> -->
 </body>
 </html>
