--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
   <!-- code a "How it works" section -->
   <div class="container">
     <div class="row container-fluid-index center d-flex justify-content-between">
-      <div class="card col-sm-12 col-lg-3">
+      <div class="card col-xs-12 col-sm-12 col-lg-3">
         <i class="fas fa-atom"></i>
         <h4>Open Innovation in Life Sciences</h4>
         <p>Promoting transparency and accessibility of the research process.</p>
         <a class="btn-secondary" href="https://www.openinnovationlifesciences.com/" target="_blank">More</a>
       </div>
 
-      <div class="card col-sm-12 col-lg-3">
+      <div class="card col-xs-12 col-sm-12 col-lg-3">
         <i class="fas fa-chart-line"></i>
         <h4>Tech + Data Science</h4>
         <p>Statistics. Image processing. Over 15 years of experience generating and wrangling data. Now with web dev skills!</p>
         <a class="btn-secondary" href="https://orcid.org/0000-0003-2082-6937" target="_blank">More</a>
       </div>
 
-      <div class="card col-sm-12 col-lg-3">
+      <div class="card col-xs-12 col-sm-12 col-lg-3">
         <i class="fas fa-camera"></i>
         <h4>Photography</h4>
         <p>Professional-level hobby: Landscapes, Portraits, Engagements, Etc.</p>
