--- a/index.html
+++ b/index.html
@@ -13,33 +13,31 @@
 <body>
   <!-- code a Hero / Banner section -->
   <div class="banner" style="background-image: linear-gradient(90deg, rgba(100,100,100,0.1) 0%, rgba(100,100,100,0.4) 100%), url('images/DSC_0109.jpg')">
-    <div class="container">
       <h1>Joyce Kao, Ph.D.</h1>
       <p>Open Science | Tech & Data | Photography</p>
       <div class="btn-container">
         <a class="btn-primary" href="images/JKAO_CV_20201213.pdf">Résumé</a>
         <a class="btn-primary" href="mailto:joyceykao@gmail.com?">Contact</a>
       </div>
-    </div>
   </div>
   <!-- code a "How it works" section -->
-  <div class="container">
+  <div class="cards">
     <div class="row container-fluid-index center d-flex justify-content-between">
-      <div class="card col-xs-12 col-sm-12 col-lg-3">
+      <div class="card col-xs-12 col-sm-12 col-md-11 col-lg-3">
         <i class="fas fa-atom"></i>
         <h4>Open Innovation in Life Sciences</h4>
         <p>Promoting transparency and accessibility of the research process.</p>
         <a class="btn-secondary" href="https://www.openinnovationlifesciences.com/" target="_blank">More</a>
       </div>
 
-      <div class="card col-xs-12 col-sm-12 col-lg-3">
+      <div class="card col-xs-12 col-sm-12 col-md-11 col-lg-3">
         <i class="fas fa-chart-line"></i>
         <h4>Tech + Data Science</h4>
         <p>Statistics. Image processing. Over 15 years of experience generating and wrangling data. Now with web dev skills!</p>
         <a class="btn-secondary" href="https://orcid.org/0000-0003-2082-6937" target="_blank">More</a>
       </div>
 
-      <div class="card col-xs-12 col-sm-12 col-lg-3">
+      <div class="card col-xs-12 col-sm-12 col-md-11 col-lg-3">
         <i class="fas fa-camera"></i>
         <h4>Photography</h4>
         <p>Professional-level hobby: Landscapes, Portraits, Engagements, Etc.</p>
