--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <h1>Joyce Kao, Ph.D.</h1>
       <p>Open Science | Tech & Data | Photography</p>
       <div class="btn-container">
-        <a class="btn-primary" href="images/JKAO_CV_20201213.pdf">Résumé</a>
-        <a class="btn-primary" href="mailto:joyceykao@gmail.com?">Contact</a>
+        <a class="btn-primary" href="images/JKAO_CV_2021.03.14.pdf">Résumé</a>
+        <a class="btn-primary" href="mailto:joyce@jykao.com?">Contact</a>
       </div>
   </div>
   <!-- code a "How it works" section -->
