--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta name="description" content="Based in Zurich, Switzerland, but am no stranger to remote work. Offering data + image analysis, and web development services. Advocates for Open Science. I have a hobby too: Photography!">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -62,9 +62,10 @@
       <a href="https://twitter.com/joyceykao"><i class="fab fa-fw fa-twitter"></i></a>
 <!--       <a class="btn-secondary" id="test-btn">More</a> -->
     </div>
-      <p>Copyright 2020 by Joyce Y. Kao.</p>
+      <p>Copyright 2021 by Joyce Y. Kao.</p>
   </div>
 <!--   <input type="file" webkitdirectory="" directory=""> -->
 <!--   <script src="lib/main.js"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
 </html>
