--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
   <!-- code a Hero / Banner section -->
   <div class="banner" style="background-image: linear-gradient(90deg, rgba(100,100,100,0.1) 0%, rgba(100,100,100,0.4) 100%), url('images/DSC_0109.jpg')">
@@ -30,30 +31,29 @@
       </div>
   </div>
   <!-- code a "How it works" section -->
-  <div class="cards">
-    <div class="row container-fluid-index center d-flex justify-content-between">
-      <div class="card col-xs-12 col-sm-12 col-md-11 col-lg-3">
+    <div class="container-fluid d-lg-flex flex-row justify-content-between">
+      <div class="card d-flex column justify-content-between col-lg-3 m-3">
         <i class="fas fa-atom"></i>
         <h4>Open Innovation in Life Sciences</h4>
         <p>Promoting transparency and accessibility of the research process.</p>
         <a class="btn-secondary" href="https://www.openinnovationlifesciences.com/" target="_blank">More</a>
       </div>
 
-      <div class="card col-xs-12 col-sm-12 col-md-11 col-lg-3">
+      <div class="card d-flex column justify-content-between col-lg-3 m-3">
         <i class="fas fa-chart-line"></i>
         <h4>Tech + Data Science</h4>
         <p>Statistics. Image processing. Over 15 years of experience generating and wrangling data. Now with web dev skills!</p>
         <a class="btn-secondary" href="https://orcid.org/0000-0003-2082-6937" target="_blank">More</a>
       </div>
 
-      <div class="card col-xs-12 col-sm-12 col-md-11 col-lg-3">
+      <div class="card d-flex column justify-content-between col-lg-3 m-3">
         <i class="fas fa-camera"></i>
         <h4>Photography</h4>
         <p>Professional-level hobby: Landscapes, Portraits, Engagements, Etc.</p>
-        <a class="btn-secondary" href="https://www.facebook.com/pg/candycowphotography" target="_blank">More</a>
+        <a class="btn-secondary" href="photography.html" target="_blank">More</a>
       </div>
     </div>
-  </div>
+
   <!-- code a footer -->
   <div class="footer">
     <div class="links">
