--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </script>
   <meta charset="UTF-8">
   <title>Joyce Kao: Tech & Data | Open Science | Photography</title>
-  <link rel="shortcut icon" href="data:image/x-icon;" type="image/x-icon">
+  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
   <meta name="description" content="Based in Zurich, Switzerland, but am no stranger to remote work. Offering data + image analysis, and web development services. Advocates for Open Science. I have a hobby too: Photography!">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
