fixed footer, added email icon, improved photobio page

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       <h1>Joyce Kao, Ph.D.</h1>
       <p>Open Science | Tech & Data | Photography</p>
       <div class="btn-container">
-        <a class="btn-primary" href="images/JKAO_CV_2021.03.14.pdf">Résumé</a>
-        <a class="btn-primary" href="mailto:joyce@jykao.com?">Contact</a>
+        <a class="btn-primary" href="images/JKAO_CV_2021.03.14.pdf">CV<br><em>updated: Mar 2021</em></a>
+<!--         <a class="btn-primary" href="mailto:joyce@jykao.com?">Contact</a> -->
       </div>
   </div>
   <!-- code a "How it works" section -->
@@ -49,7 +49,7 @@
       <div class="card d-flex column justify-content-between col-lg-3 m-3">
         <i class="fas fa-camera"></i>
         <h4>Photography</h4>
-        <p>Professional-level hobby: Landscapes, Portraits, Engagements, Etc.</p>
+        <p>Professional-level hobby: Landscapes, Portraits, Life Events, Etc.</p>
         <a class="btn-secondary" href="photography.html" target="_blank">More</a>
       </div>
     </div>
@@ -60,6 +60,7 @@
       <a href="https://www.linkedin.com/in/joyceykao/"><i class="fab fa-fw fa-linkedin"></i></a>
       <a href="https://github.com/joyceykao"><i class="fab fa-fw fa-github"></i></a>
       <a href="https://twitter.com/joyceykao"><i class="fab fa-fw fa-twitter"></i></a>
+      <a href="mailto:joyce@jykao.com?"><i class="fas fa-envelope"></i></a>
 <!--       <a class="btn-secondary" id="test-btn">More</a> -->
     </div>
       <p>Copyright 2021 by Joyce Y. Kao.</p>
